<resources>
    <string name="app_name">RajasthanHackathon</string>
    <string name="category1">Nature</string>
    <string name="category2">Museum</string>
    <string name="category3">Fun</string>
    <string name="category4">Religious</string>
    <string name="category5">Monuments</string>
    <string name="google_maps_key">AIzaSyC9SfBZtuI7rSqoS493y2mMH4z0FyN_yTE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
