<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteY="81dp"
    tools:context="in.leaf.abhi.rajasthanhackathon.CategorySelect">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:background="@drawable/nature"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/category5"
            app:layout_constraintTop_toBottomOf="@+id/category4" />

        <Button
            android:id="@+id/category3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/fun"
            android:text="@string/category3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/category5"
            app:layout_constraintEnd_toStartOf="@+id/category4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category1" />

        <Button
            android:id="@+id/category1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/nature"
            android:text="@string/category1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/category3"
            app:layout_constraintEnd_toStartOf="@+id/category2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/category2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/museum"
            android:text="@string/category2"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/category4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/category1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/category4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/religion"
            android:text="@string/category4"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/category3"
            app:layout_constraintTop_toBottomOf="@+id/category2" />

        <Button
            android:id="@+id/category5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/monument"
            android:text="@string/category5"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category3" />
    </android.support.constraint.ConstraintLayout>